<resources>
    <string name="app_name">TalkHub</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="mobile">Mobile</string>
    <string name="send_otp">Send otp</string>
    <string name="enter_otp_sent_to_your_phone_number">Enter OTP sent to your phone number</string>
    <string name="otp">OTP</string>
    <string name="next">NEXT</string>
    <string name="resend_otp_in_30_sec">Resend OTP in 30 sec</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="username">Username</string>
    <string name="let_me_in">LET ME IN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_screen">Chat Screen</string>
    <string name="profile_scrren">Profile Scrren</string>
    <string name="profile_screen">Profile Screen</string>
    <string name="search_user">Search User</string>
    <string name="Username">Username</string>
    <string name="user_name">User name</string>
    <string name="_0000000000">+0000000000</string>
    <string name="write_message_here">Write message here</string>
    <string name="hello_how_are_you">Hello How are you?</string>
    <string name="i_am_fine">I am fine.</string>
    <string name="phone">Phone</string>
    <string name="update_profile">Update profile</string>
    <string name="logout">Logout</string>
    <string name="update__profile">Update Profile</string>
</resources>