<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    android:weightSum="100"
    tools:context=".LoginPhoneNumberActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="20">
        
        <RelativeLayout
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/my_primary"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/light_gray"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/light_gray"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/baseline_phone_android_24"
        android:layout_weight="20"
        app:tint="@color/my_primary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_mobile_number"
        android:layout_gravity="center_vertical"
        android:textSize="25sp"
        android:textStyle="bold"
        android:letterSpacing="0.08"
        android:layout_weight="5"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="5"
        >

        <com.hbb20.CountryCodePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false"
            android:id="@+id/login_countryCode"/>
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="5dp"
            android:id="@+id/login_mobile_number"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_weight="20">
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_corner"
            android:text="@string/send_otp"
            android:id="@+id/send_otp_btn"
            />
 
        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/my_primary"
            android:layout_gravity="center"
            android:id="@+id/login_progress_bar"/>

    </LinearLayout>

</LinearLayout>